# era-mqtt

./: .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  conftest.py  docker-compose.yml  entrypoint.sh  fabfile.py  init_app.py  pyproject.toml  setup.cfg
.github/actions/cache_poetry/: action.yml
.github/scripts/: verify_mqtt_connection.py
.github/workflows/: deploy-production.yml  deploy-staging.yml  flake8.yml  pull-request.yml  release-version.yml
datadog/: datadog.yaml  logs.yaml
emqx_config/: emqx.conf
factories/: acl.py  users.py
migrations/: alembic.ini
migrations/versions/: 39a9bebf0551_clear_migrations.py  84518e17df6a_create_user_acl_table.py  e44fcc162140_create_user_and_acl.py  f16bb86cb004_create_user_table.py
mqtt/: emqx.conf
nginx/: nginx.conf
ssl/: cert.pem  key.pem
supervisor/: supervisord.conf
supervisor/conf.d/: datadog.conf  emqx.conf  nginx.conf  uwsgi.conf
tests/: TODO_test_healthcheck.py  test_api_acl.py  test_api_rule.py  test_api_user.py  test_healthcheck.py  test_hello_world.py
uwsgi/: config.ini
