[tool.poetry]
name = "poetry add flask"
version = "0.1.0"
description = ""
authors = ["Son Mac <son.lg@eoh.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
