[tool.poetry]
name = "poetry add flask"
version = "0.1.0"
description = ""
authors = ["Son Mac <son.lg@eoh.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
uwsgi = "^2.0.21"
flask-basicauth = "^0.2.0"
basicauth = "^1.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
freezegun = "^1.2.2"
factory-boy = "^3.2.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
